--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="rock">Rock</button>
+			<button id="paper">Paper</button>
+			<button id="scissors">scissors</button>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
