--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button id="rock">Rock</button>
-			<button id="paper">Paper</button>
-			<button id="scissors">scissors</button>
+			<button type="button" id="rock">Rock</button>
+			<button type="button" id="paper">Paper</button>
+			<button type="button" id="scissors">scissors</button>
 		</div>
 		<div id="messages"></div>
 	</div>
