--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons">
-			<button type="button" id="rock">Rock</button>
-			<button type="button" id="paper">Paper</button>
-			<button type="button" id="scissors">scissors</button>
+		<div class="new-game-container">
+			<button type="button" id="new-game">New Game</button>
+			<button type="button" id="rules">Rules</button>
 		</div>
-		<div id="messages"></div>
+		<div class="game-board">
+			<div class="computer-cards">
+				<div id="com-rock-card"></div>
+				<div id="com-paper-card"></div>
+				<div id="com-scissors-card"></div>
+			</div>
+			<div class="player-cards">
+				<div id="player-rock-card"></div>
+				<div id="player-paper-card"></div>
+				<div id="player-scissors-card"></div>
+			</div>
+			<div class="result-board">
+				<h2>Computer</h2>
+				<p>0</p>
+				<button type="button" id="new-game">New Game</button>
+				<h2>Player</h2>
+				<p>0</p>
+			</div>
+			<h2>choose a card</h2>
+		</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
