Add basic css and fighting arena html

--- a/index.html
+++ b/index.html
@@ -8,28 +8,39 @@
 <body>
 	<div class="container">
 		<div class="new-game-container">
-			<button type="button" id="new-game">New Game</button>
+			<button type="button" class="new-game">New Game</button>
 			<button type="button" id="rules">Rules</button>
 		</div>
-		<div class="game-board">
-			<div class="computer-cards">
-				<div id="com-rock-card"></div>
-				<div id="com-paper-card"></div>
-				<div id="com-scissors-card"></div>
-			</div>
-			<div class="player-cards">
-				<div id="player-rock-card"></div>
-				<div id="player-paper-card"></div>
-				<div id="player-scissors-card"></div>
+		<div class="wrapper">
+			<div class="game-board">
+				<div class=" wrapper computer-cards">
+					<div class="card com-card" id="com-rock-card"></div>
+					<div class="card com-card" id="com-paper-card"></div>
+					<div class="card com-card" id="com-scissors-card"></div>
+				</div>
+				<div class="fighting-arena">
+					<h2>Vs</h2>
+				</div>
+				<div class="wrapper player-cards">
+					<div class="card player-card" id="player-rock-card">
+						<img src="images/rock.png" alt="sign of the stone">
+					</div>
+					<div class="card player-card" id="player-paper-card">
+						<img src="images/paper.png" alt="sign of the paper">
+					</div>
+					<div class="card player-card" id="player-scissors-card">
+						<img src="images/scissors.png" alt="sign of the scissors">
+					</div>
+				</div>
+				<h2>choose a card</h2>
 			</div>
 			<div class="result-board">
 				<h2>Computer</h2>
 				<p>0</p>
-				<button type="button" id="new-game">New Game</button>
+				<button type="button" class="new-game">New Game</button>
 				<h2>Player</h2>
 				<p>0</p>
 			</div>
-			<h2>choose a card</h2>
 		</div>
 	</div>
 	<script src="js/functions.js"></script>
